# wasm

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.nu  index.html
assets/: root.css
docs/: index.html  lib-716884b4854ff7c2.js  lib-716884b4854ff7c2_bg.wasm  lib-d74d538b8d989b97.js  lib-d74d538b8d989b97_bg.wasm  lib-e331fa6b9e8c31b0.js  lib-e331fa6b9e8c31b0_bg.wasm  life-480200ff59b4534b.js  life-480200ff59b4534b_bg.wasm  life-e200da011fd223e1.css  root-77174b278505418a.css
easel/: Cargo.toml  README.md  Trunk.toml  index.html
easel/assets/: root.css
easel/src/: easel.rs  error.rs  lib.rs  main.rs  pause.rs  time.rs
easel/src/chart/: fill.rs  histogram.rs  mod.rs
easel/src/easel/: mod.rs
index/: Cargo.toml  Trunk.toml  index.html
index/assets/: root.css
index/src/: main.rs
layout/: Cargo.toml  README.md  Trunk.toml  index.html
layout/assets/: root.css
layout/src/: lib.rs  main.rs
life/: Cargo.toml  Trunk.toml  index.html
life/assets/: life.css  root.css
magic/: Cargo.toml
perf/: Cargo.toml
pong/: Cargo.toml  README.md  Trunk.toml  index.html
pong/assets/: root.css
pong/src/: app.rs  ball.rs  constants.rs  game.rs  glass.rs  lib.rs  main.rs  paddle.rs  physics.rs  state.rs
primes/: Cargo.toml  Trunk.toml  index.html
primes/assets/: root.css
primes/src/: app.rs  chart.rs  error.rs  fill.rs  histogram.rs  js.rs  lib.rs  main.rs  system.rs  web.rs
primes/src/chart/: fill.rs  histogram.rs  mod.rs
primes/src/magic/: component.rs  mod.rs  tag.rs
src/: main.rs
sugar/: Cargo.toml  Trunk.toml
system/: Cargo.toml
(+22 files in other folders)
