[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"

easel = { path = "../easel" }
layout = { path = "../layout" }
sugar = { path = "../sugar" }
system = { path = "../system" }

[dependencies.web-sys]
version = "0.3.77"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "KeyboardEvent",
  "FocusOptions",
  "HtmlElement",
  "Window",
  "console",
]
